--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,204 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --bg-color: #e6fffb;
+  --text-color: #262626;
+  --comp-bg-color: #fffbe6;
+  --header-bg-color: #7cb305;
+  --hover-color: #e6f4ff;
+  --border-color: #8c8c8c;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+  width: 100vw;
+  height: 100vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  width: 100vw;
+  height: 50px;
+  background-color: var(--header-bg-color);
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.heading {
+  font-size: 18px;
+  font-weight: 600;
+  color: var(--text-color);
+}
+
+.main-box {
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  height: calc(100vh - 50px);
+  padding: 10px;
+  gap: 10px;
+}
+
+.sub-box {
+  flex: 1;
+  border: 1px solid var(--border-color);
+  background-color: var(--bg-color);
+  border-radius: 5px;
+}
+
+.sub-box-1 {
+  flex: 3;
+  border: 1px solid var(--border-color);
+  border-radius: 5px;
+}
+
+.sub {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+  gap: 10px;
+}
+
+.wrapper {
   display: flex;
   flex-direction: column;
+  padding: 10px;
+  gap: 10px;
+}
+
+.sub-heading {
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--text-color);
+}
+
+.card-box {
+  width: 100%;
+  min-height: 120px;
+  border: 1px solid var(--border-color);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 5px;
+  gap: 10px;
+  cursor: pointer;
+}
+
+.title-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.icon {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.img {
+  height: 15px;
+  cursor: pointer;
+}
+
+.para {
+  font-size: 12px;
+  font-weight: 400;
+  color: var(--text-color);
+}
+
+.status-bar {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.progress-bar {
+  width: 100%;
+  height: 5px;
+  border: 1px solid var(--border-color);
+  border-radius: 10px;
+}
+
+.complete-status {
+  height: 100%;
+  overflow: hidden;
+  background-color: red;
+}
+
+.modal-box {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.modal-content {
+  background: #fff;
+  width: 400px;
+  height: 360px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  color: var(--text-color);
+  margin-top: 10px;
+}
+
+label {
+  display: flex;
+  align-items: baseline;
+  gap: 20px;
+  font-size: 14px;
+}
+
+input {
+  width: 100%;
+  padding: 5px;
+}
+
+textarea {
+  resize: none;
+  padding: 5px;
+  width: 100%;
+}
+
+select {
+  width: 100px;
+  padding: 5px;
+}
+
+button {
+  padding: 5px;
+  background-color: var(--text-color);
+  color: var(--header-bg-color);
+  border: 1px solid var(--border-color);
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: var(--header-bg-color);
+  color: var(--text-color);
 }
